# storage/api-docs/api-docs.json
@@ -8,13 +8,278 @@
         },
         "version": "1.0.0"
     },
-    "host": "127.0.0.1:8000",
+    "host": "http://my-default-host.com",
     "basePath": "/api",
     "schemes": [
         "http",
         "https"
     ],
     "paths": {
+        "/jagga/add": {
+            "post": {
+                "summary": "Add Jagga",
+                "operationId": "addJagga",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "formData",
+                        "description": "User Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Type",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "phone_no",
+                        "in": "formData",
+                        "description": "Phone no.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lat",
+                        "in": "formData",
+                        "description": " Location - Longitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lon",
+                        "in": "formData",
+                        "description": "Location - Latitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address",
+                        "in": "formData",
+                        "description": "Address",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "image",
+                        "in": "formData",
+                        "description": "Room Image",
+                        "required": true,
+                        "type": "file"
+                    },
+                    {
+                        "name": "price",
+                        "in": "formData",
+                        "description": "Price",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "description",
+                        "in": "formData",
+                        "description": "Description",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "sold",
+                        "in": "formData",
+                        "description": "Sold",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "jagga/update-jagga": {
+            "post": {
+                "summary": "Update Jagga",
+                "operationId": "updateJagga",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "formData",
+                        "description": "User Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "jagga_id",
+                        "in": "formData",
+                        "description": "Jagga Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Type",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "phone_no",
+                        "in": "formData",
+                        "description": "Phone no.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lat",
+                        "in": "formData",
+                        "description": " Location - Longitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lon",
+                        "in": "formData",
+                        "description": "Location - Latitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address",
+                        "in": "formData",
+                        "description": "Address",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "image",
+                        "in": "formData",
+                        "description": "Room Image",
+                        "required": true,
+                        "type": "file"
+                    },
+                    {
+                        "name": "price",
+                        "in": "formData",
+                        "description": "Price",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "description",
+                        "in": "formData",
+                        "description": "Description",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "sold",
+                        "in": "formData",
+                        "description": "Sold",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "jagga/delete": {
+            "post": {
+                "summary": "Delete Jagga",
+                "operationId": "deleteJagga",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "formData",
+                        "description": "User Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "jagga_id",
+                        "in": "formData",
+                        "description": "Jagga Id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "jagga/detail": {
+            "post": {
+                "summary": "Jagga Detail",
+                "operationId": "jdetail",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "formData",
+                        "description": "Jagga Id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
         "/room/add": {
             "post": {
                 "summary": "Add Room",
@@ -138,6 +403,224 @@
                         "description": "Occupied",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "Accept",
+                        "in": "path",
+                        "description": "Response content type, could be used to return json response for a xml request",
+                        "type": "string",
+                        "enum": "['abc' , 'sdfsdf' , 'sdfsdfs']"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "room/detail": {
+            "post": {
+                "summary": "Room Detail",
+                "operationId": "rdetail",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "formData",
+                        "description": "Room Id",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "room/update-room": {
+            "post": {
+                "summary": "Update Room",
+                "operationId": "updateRoom",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "formData",
+                        "description": "User Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "room_id",
+                        "in": "formData",
+                        "description": "Room Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "type",
+                        "in": "formData",
+                        "description": "Type",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "no_of_floor",
+                        "in": "formData",
+                        "description": "Number of rooms",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "no_of_room",
+                        "in": "formData",
+                        "description": "Number of floors",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "kitchen",
+                        "in": "formData",
+                        "description": "Kitchen",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "parking",
+                        "in": "formData",
+                        "description": "Parking",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "restroom",
+                        "in": "formData",
+                        "description": "Restroom",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "phone_no",
+                        "in": "formData",
+                        "description": "Phone no.",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lat",
+                        "in": "formData",
+                        "description": " Location - Longitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "loc_lon",
+                        "in": "formData",
+                        "description": "Location - Latitude",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "address",
+                        "in": "formData",
+                        "description": "Address",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "image",
+                        "in": "formData",
+                        "description": "Room Image",
+                        "required": true,
+                        "type": "file"
+                    },
+                    {
+                        "name": "preference",
+                        "in": "formData",
+                        "description": "Preference",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "price",
+                        "in": "formData",
+                        "description": "Price",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "description",
+                        "in": "formData",
+                        "description": "Description",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "occupied",
+                        "in": "formData",
+                        "description": "Occupied",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "406": {
+                        "description": "not acceptable"
+                    },
+                    "500": {
+                        "description": "internal server error"
+                    }
+                }
+            }
+        },
+        "room/delete": {
+            "post": {
+                "summary": "Delete Room",
+                "operationId": "deleteRoom",
+                "parameters": [
+                    {
+                        "name": "access_token",
+                        "in": "header",
+                        "description": "Access Token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "formData",
+                        "description": "User Id",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "room_id",
+                        "in": "formData",
+                        "description": "Room Id",
+                        "required": true,
+                        "type": "integer"
                     }
                 ],
                 "responses": {
